--- a/zapp/templates/base_zappv2.html
+++ b/zapp/templates/base_zappv2.html
@@ -26,7 +26,7 @@
   </aside>
   {% endcomment %}
   
-  <main class="container p-4 pt-16 pb-12">
+  <main class="container p-4 pt-16 pb-12 h-screen max-w-full">
       {% block content %}{% endblock %}
   </main>
 
