--- a/mydj/templates/cotton/hero/index.html
+++ b/mydj/templates/cotton/hero/index.html
@@ -17,17 +17,11 @@
               {% endif %}
               {% if herocontent.type == 'text' %}
                 <h1 class="flex text-5xl font-bold mb-6 {{ title.class|default:"" }}">
-                  {% for id in herocontent.title.stb_ids %} 
-                    <div class="flex">
-                      <c-svgtextbadge :id="id"></c-svgtextbadge>
-                    </div> 
-                  {% endfor %}             
+                  <c-textrouter :type="herocontent.title.id_type" :ids="herocontent.title.ids"></c-textrouter>
                 </h1>       
-                {% for id in herocontent.contents.stb_ids %}
-                  <div class="flex text-2xl mb-6">
-                    <c-svgtextbadge :id="id"></c-svgtextbadge>
-                  </div>
-                {% endfor %}  
+                <div class="flex flex-col text-2xl mb-6">
+                  <c-textrouter :type="herocontent.contents.id_type" :ids="herocontent.contents.ids"></c-textrouter>
+                </div>  
                 {% if herocontent.actions.position == 'end' %}                        
                     <c-hero.actions :actions="herocontent.actions"></c-hero.actions>
                 {% endif %}                
