--- a/mydj/templates/cotton/card/index.html
+++ b/mydj/templates/cotton/card/index.html
@@ -19,10 +19,10 @@
                 <c-card.actions></c-card.actions>
             {% endif %}      
             <h2 class="card-title {{ card.title.class|default:"" }}">
-                <c-textrouter :type="card.title.id_type" :ids="card.title.ids"></c-textrouter>        
+                <c-textrouter :type="card.title.type" :ids="card.title.ids"></c-textrouter>        
             </h2>
 
-            <c-textrouter :type="card.contents.id_type" :ids="card.contents.ids"></c-textrouter>
+            <c-textrouter :type="card.contents.type" :ids="card.contents.ids"></c-textrouter>
 
             {% if card.actions.position == 'end' %}                        
                 <c-card.actions></c-card.actions>
