--- a/mydj/templates/cotton/level40splitter.html
+++ b/mydj/templates/cotton/level40splitter.html
@@ -1,19 +1,19 @@
 {% load my_filters %}
 {# Level40 Card/ Hero etc are routed in this step #}
-{% with type=dict40|get_item:"type" link_id=dict40|get_item:"link_id" %}
-    {% if type == "Card" %}  
+{% with type=dict40|get_item:"type"|lower link_id=dict40|get_item:"link_id" %}
+    {% if type == "card" %}  
         {% with card=site_cards|get_dictid:link_id %}
         <c-card :card="card"></c-card>
         {% endwith %}                       
-    {% elif type == "Hero" %} 
+    {% elif type == "hero" %} 
         {% with hero=site_heros|get_dictid:link_id %}
         <c-hero :hero="hero"></c-hero>
         {% endwith %}                       
-    {% elif type == "Accordion" %} 
+    {% elif type == "accordion" %} 
         {% with accordion=site_accordions|get_dictid:link_id %}
         <c-accordion :accordion="accordion"></c-accordion>
         {% endwith %}
-    {% elif type == "Carousal" %} 
+    {% elif type == "carousal" %} 
         {% with carousal=site_carousals|get_dictid:link_id %}
             <c-carousal :carousal="carousal"></c-carousal>
         {% endwith %}
