--- a/mydj/templates/cotton/select_theme.html
+++ b/mydj/templates/cotton/select_theme.html
@@ -41,14 +41,14 @@
   </div>
     {% endcomment %}
   <ul tabindex="0" class="dropdown-content bg-base-300 rounded-box z-1 w-52 p-2 shadow-2xl">
-    {% for theme in PC_THEMES %}
+    {% for theme in themes %}
         <li>
         <input
             type="radio"
             name="theme-dropdown"
             class="theme-controller w-full btn btn-sm btn-block btn-ghost justify-start"
             aria-label={{theme.text|my_text}}
-            value={{theme.value}} />
+            value={{theme.id}} />
         </li>        
     {% endfor %}
   </ul>
