--- a/mydj/templates/cotton/navbar_v001_l1recur.html
+++ b/mydj/templates/cotton/navbar_v001_l1recur.html
@@ -14,6 +14,10 @@
     </li>
 
     {% else %}
-    <li><a>{{item.text|my_text}}</a></li>
+    {% comment %}
+    <li><a href="{% url item.id client_id %}">{{item.text|my_text}}</a></li>
+    {% endcomment %}
+
+    <li><a href="{% url 'client_page' client_id item.id %}">{{item.text|my_text}}</a></li>
     {% endif %}
 {% endfor %}
