--- a/mydj/templates/cotton/rawtext.html
+++ b/mydj/templates/cotton/rawtext.html
@@ -7,6 +7,13 @@ Input is an id:
 
 
 {# text is brought from raw_texts using id #}
+{% comment %}
 {% with dict=raw_texts|get_dictid:id %}    
+{% endcomment %}
+
+
+
+{# text is brought from raw_texts using id_token #}
+{% with dict=raw_texts|get_listdict_by_id_token:id|get_dict_by_id_client_and_prioritized_values:client_hierarchy_str %}    
     {{dict.text|my_text}}
 {% endwith %}    
