--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{client_id|title}}</title>
+  <title>{{id_client|title}}</title>
   <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
   {% tailwind_css %}
 </head>
