--- a/mydj/templates/cotton/select_theme.html
+++ b/mydj/templates/cotton/select_theme.html
@@ -39,6 +39,8 @@
       <path d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"></path>
     </svg>
   </div>
+  {{theme.text|my_text}}
+  raw_texts|get_list_filtered_by_id_token:theme|get_dict_by_id_client_and_prioritized_values:client_hierarchy_str|get_item:text|my_text
     {% endcomment %}
   <ul tabindex="0" class="dropdown-content bg-base-300 rounded-box z-1 w-52 p-2 shadow-2xl">
     {% for theme in themes %}
@@ -47,9 +49,10 @@
             type="radio"
             name="theme-dropdown"
             class="theme-controller w-full btn btn-sm btn-block btn-ghost justify-start"
-            aria-label={{theme.text|my_text}}
-            value={{theme.id}} />
+            aria-label={{raw_texts|get_list_filtered_by_id_token:theme|get_dict_by_id_client_and_prioritized_values:client_hierarchy_str|get_item:"text"|my_text}}
+            value={{theme}} />
         </li>        
     {% endfor %}
+
   </ul>
 </div>
