--- a/mydj/templates/cotton/select_language.html
+++ b/mydj/templates/cotton/select_language.html
@@ -7,8 +7,8 @@
     <select class="select" id="language-select" name="language" onchange="this.form.submit()">
       {% for item in languages %}    
         {% comment %}
-        <option value="{{ item.id_token }}" {% if current_language == item.id_token %}selected{% endif %}>        
-        {{ item.id_token }}-{{item.text|my_text}}
+        <option value="{{ item.token }}" {% if current_language == item.token %}selected{% endif %}>        
+        {{ item.token }}-{{item.text|my_text}}
         {% endcomment %}
         <option value="{{ item }}" {% if current_language == item %}selected{% endif %}>        
         {{ item }}-<c-rawtext :id="item"></c-rawtext>
