--- a/mydj/templates/cotton/navbar_v001_l1recur.html
+++ b/mydj/templates/cotton/navbar_v001_l1recur.html
@@ -1,23 +1,25 @@
 {% load my_filters %}
+{% load my_tags %}
 
-{% for item in items|dictsort:"order" %}
+{% for item in items %}
+    {% with page_id=item|get_item:"page_id" %}    
+        {% if item.children %}  <!-- if the children length > 0 -->
+            <li>
+                <details>
+                    <summary>{% mytext_static_tag page_id %}</summary>
+                    <ul class="p-2">
+                        <c-navbar_v001_l1recur :items="item.children"></c-navbar_v001_l1recur>
+                    </ul>
+                </details>
+            </li>
 
-    {% if item.children %}  <!-- if the children length > 0 -->
-    <li>
-        <details>
-            <summary>{{item.text|my_text}}</summary>
-
-            <ul class="p-2">
-                <c-navbar_v001_l1recur :items="item.children"></c-navbar_v001_l1recur>
-            </ul>
-        </details>
-    </li>
-
-    {% else %}
-    {% comment %}
-    <li><a href="{% url item.id client %}">{{item.text|my_text}}</a></li>
-    {% endcomment %}
-
-    <li><a href="{% url 'client_page' client item.id %}">{{item.text|my_text}}</a></li>
-    {% endif %}
+        {% else %}
+            <li>
+                <a href="{% url 'client_page' client_id page_id %}">
+                    {% mytext_static_tag page_id %}
+                </a>
+            </li>
+        {% endif %}
+    {% endwith %}
 {% endfor %}
+
