images into model

--- a/mydj/templates/cotton/navbar_v001.html
+++ b/mydj/templates/cotton/navbar_v001.html
@@ -21,8 +21,9 @@
 
     <h1 class="text-xl font-bold {{nb.title.class|default:""}}">
       {% comment %}
+      {{images_static_dict}}
       {% endcomment %}
-
+      
       <c-textrouter :type="nb.title.type" :ids="nb.title.ids"></c-textrouter>
       
 
